nextBtn and prevBtn created

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div class="searchContainer">
 
     </div>
+    <button class='previous'>previous</button>
+    <button class='next'>next</button>
   </main>
 
   <footer></footer>
