fixed next and previous btns

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
       <input type="submit" placeholder="Enter State" id="searchSubmit">
     </form>
     <h3 class='main__h3'>Search Results:</h3>
-    <div class="searchContainer">
+    <section class="searchContainer">
 
-    </div>
-    <button class='previous'>previous</button>
-    <button class='next'>next</button>
+    </section>
+    <section class='pageBtns'>
+
+    </section>
   </main>
 
   <footer></footer>
