--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <title>Brewery Finder</title>
 </head>
 <body>
-  <header>
-    <h1><a href="">Brewery Finder</a></h1>
+  <header class="headerNl">
+    
+    <h1 class="header__h1"><a href="">Brewery Finder<span class="material-icons">
+      sports_bar
+      </span></a></h1>
     <form id="search__form">
       <input type="text" name="search__value" id="searchValue" placeholder="Search Brewery">
       <button id="searchSubmit"><span class="material-icons">
