style changes + added geo api

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-  <title>Brewery Finder</title>
+  <title>Breweries, Brewpubs, Cideries near you!</title>
 </head>
 <body>
   <header class="headerNl">
@@ -20,7 +20,7 @@
       sports_bar
       </span></a></h1>
     <form id="search__form">
-      <input type="text" name="search__value" id="searchValue" placeholder="Search Brewery">
+      <input type="text" name="search__value" id="searchValue" placeholder="Enter City">
       <button id="searchSubmit"><span class="material-icons">
         search
         </span>
