--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       sports_bar
       </span></a></h1>
     <form id="search__form">
-      <input type="text" name="search__value" id="searchValue" placeholder="Enter City">
+      <input type="text" name="search__value" id="searchValue" placeholder='Enter City or Type "Current Location"'>
       <button id="searchSubmit"><span class="material-icons">
         search
         </span>
