--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
   </main>
 
   <footer>
-    
+    <p>Vince Abuyuan©2021</p>
+    <a href="https://booyouon.github.io/"><span class="material-icons">
+      home
+      </span></a>
   </footer>
 </body>
 </html>
