--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
   </header>
 
   <main>
-
+    <div class="loadingContainer">
+      <span class="loading material-icons">
+  sports_bar
+  </span>
+    </div>
     <h2 class='main__h3'>Search Results:</h2>
     <section class="searchContainer">
 
