--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <section class='pageBtns'>
 
     </section>
+    <section class='favorites'>
+      <h2 class="favorites__h2">Liked Breweries</h2>
+      <div class="favorites__container">
+        
+      </div>
+    </section>
   </main>
 
   <footer>
