last second updates

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </section>
     <section class='favorites'>
       <h2 class="favorites__h2">Liked Breweries</h2>
+      <p class='favorites__nothing'>Nothing added here yet. Like a brewery by double tapping on the brewery image or clicking on the heart.</p>
       <div class="favorites__container">
         
       </div>
@@ -50,10 +51,7 @@
   </main>
 
   <footer>
-    <p>Vince Abuyuan©2021</p>
-    <a href="https://booyouon.github.io/"><span class="material-icons">
-      home
-      </span></a>
+    <h1><a href="https://booyouon.github.io/">Vince Abuyuan©2021</a> </h1>
   </footer>
 </body>
 </html>
