--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type='text/javascript' src='./config.js'></script>
+<!-- google maps api -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv9jw08MKQ5uk-gsT-3GwYSeuAxjGgrs&callback=initMap" defer>
+</script> 
   <script src="./script.js" defer></script>
   <link rel="stylesheet" href="./style.css">
   <!-- Link to google font's material icons -->
@@ -35,6 +39,7 @@
   </span>
     </div>
     <h2 class='main__h3'>Search Results:</h2>
+    <div class="map"></div>
     <section class="searchContainer">
 
     </section>
