google api hidden

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type='text/javascript' src='./config.js'></script>
 <!-- google maps api -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv9jw08MKQ5uk-gsT-3GwYSeuAxjGgrs&callback=initMap" defer>
-</script> 
+  <!-- <script
+     src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" defer>
+</script>  -->
   <script src="./script.js" defer></script>
   <link rel="stylesheet" href="./style.css">
   <!-- Link to google font's material icons -->
