--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type='text/javascript' src='./config.js'></script>
+  <script type='text/javascript' src='./config.js' defer></script>
   <script src="./script.js" defer></script>
   <link rel="stylesheet" href="./style.css">
   <!-- Link to google font's material icons -->
