--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   </span>
     </div>
     <h2 class='main__h3'>Search Results:</h2>
-    <div class="map"></div>
+    <section class="mapContainer">
+      <div class="map"></div>
+      <div class="map__iconCredit">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </section>
     <section class="searchContainer">
 
     </section>
