--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2 class='main__h3'>Search Results:</h2>
     <section class="mapContainer">
       <div class="map"></div>
-      <div class="map__iconCredit">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div class="map__iconCredit">Beer Icon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </section>
     <section class="searchContainer">
 
